--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
 	<title>Pharlap</title>
 	
 	<link href="css/angular-bootstrap.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
+	<link href="css/bootstrap-datepicker.css" rel="stylesheet">
 	
 	<style type="text/css">
 	[ng\:cloak], [ng-cloak], .ng-cloak {
@@ -13,39 +13,32 @@
 	</style>
 </head>
 
-<body ng-app="pharlap">
-	<div ng-controller="home as home" class="container">
-		<h1>Greeting</h1>
-		<div ng-cloak class="ng-cloak">
-			<p>The ID is <span class="badge">{{greeting.id}}</span></p>
-			<p>The content is <span class="badge">{{greeting.content}}</span></p>
+<body ng-app="pharlap" ng-cloak class="ng-cloak">
+
+	<div ng-controller="mainCtrl as mainCtrl" class="container">
+		<div style="font-size:40px">Pharlap</div>
+		<div style="font-size:25px">Horse Racing Prediction System</div>
+		
+		<br/>
+		<div class="form-group">
+			<label class="control-label pull-left" for="date" style="font-size:18px;padding-top:5px;margin-right:5px" >Race Date:</label>
+		  	<input class="datepicker form-control pull-left" style="font-size:18px;width:150px;margin-right:10px" readonly="readonly" ng-model="raceDate" >
+			<a type="button" class="btn btn-primary" ng-click="mainCtrl.retrieveData()">Go</a>
 		</div>
-		<div class="form-group"> <!-- Date input -->
-			<label class="control-label pull-left" for="date" >Race Date:</label>
-		  	<input class="form-control" id="date" name="date" placeholder="DD/MM/YYY" type="text" style="width:150px"/>
-		</div>
-		<div>
-			<button type="button" class="btn btn-primary" ng-click="go()">Execute</button>
-		</div>
+		
 	</div>
+	
 	<script src="js/angular-bootstrap.js" type="text/javascript"></script>
+	<script src="js/bootstrap-datepicker.js" type="text/javascript"></script>
 	<script src="js/main.js"></script>
 	
-	<!-- Bootstrap Date-Picker Plugin -->
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
-
 	<script>
-	    $(document).ready(function(){
-	      var date_input=$('input[name="date"]'); //our date input has the name "date"
-	      var container=$('.bootstrap-iso form').length>0 ? $('.bootstrap-iso form').parent() : "body";
-	      var options={
-	        format: 'dd/mm/yyyy',
-	        container: container,
-	        todayHighlight: true,
-	        autoclose: true,
-	      };
-	      date_input.datepicker(options);
-	    })
+		$('.datepicker').datepicker({
+			todayBtn: true,
+			todayHighlight: true,
+		    format: 'dd/mm/yyyy',
+		    startDate: '0d'
+		});
 	</script>
 
 </body>
