--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,19 +13,29 @@
 	</style>
 </head>
 
-<body ng-app="pharlap" ng-cloak class="ng-cloak">
+<body ng-app="pharlap" ng-cloak class="ng-cloak" style="margin-top:10px">
 
 	<div ng-controller="mainCtrl as mainCtrl" class="container">
 		<div style="font-size:40px">Pharlap</div>
 		<div style="font-size:25px">Horse Racing Prediction System</div>
 		
-		<br/>
-		<div class="form-group">
-			<label class="control-label pull-left" for="date" style="font-size:18px;padding-top:5px;margin-right:5px" >Race Date:</label>
-		  	<input class="datepicker form-control pull-left" style="font-size:18px;width:150px;margin-right:10px" readonly="readonly" ng-model="raceDate" >
-			<a type="button" class="btn btn-primary" ng-click="mainCtrl.retrieveData()">Go</a>
+<!-- 		<br/> -->
+<!-- 		<div class="form-group"> -->
+<!-- 			<label class="control-label pull-left" for="date" style="font-size:18px;padding-top:5px;margin-right:5px" >Race Date:</label> -->
+<!-- 		  	<input class="datepicker form-control pull-left" style="font-size:18px;width:150px;margin-right:10px" readonly="readonly" ng-model="raceDate" > -->
+<!-- 		</div> -->
+
+		<hr/>
+		<div>
+			<div class="pull-left" style="font-size:18px;font-weight:bold;padding-top:5px;margin-right:20px" >Upcoming Race Days</div>
+			<div>
+				<a type="button" class="btn btn-primary" ng-click="mainCtrl.retrieveData()">Refresh</a>
+			</div>
+			<br/>
+			<div>
+				{{raceDays}}
+			</div>
 		</div>
-		
 	</div>
 	
 	<script src="js/angular-bootstrap.js" type="text/javascript"></script>
